# Robot-Manipulator-with-ROS1

./: README.md
minh_robot/: CMakeLists.txt
minh_robot/action/: CommandIF.action
minh_robot/launch/: robot_rviz.launch  simulation_final.launch
minh_robot/src/: anglesconvert_services.cpp  cmd_server.cpp  robot_interface.cpp
minh_robot/urdf/: minh_robot.urdf.xacro
src/minh_robot/: package.xml
src/minh_robot/config/: joint_state_controller.yaml  trajectory_controller.yaml
src/minh_robot/include/minh_robot/: robot_interface.h
src/minh_robot/launch/: robot_controller.launch  robot_gazebo.launch
src/minh_robot/src/: cmd_client.cpp
src/minh_robot/srv/: AngleConvert_IF.srv
src/minh_robot/urdf/: minh_robot.urdf.xacro
src/minh_robot_moveit/: CMakeLists.txt  package.xml
src/minh_robot_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  minh_robot.srdf  ompl_planning.yaml  ros_controllers.yaml
src/minh_robot_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  minh_robot_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
